[project]
name = "colorado-sun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "parquet>=1.3.1",
    "pip>=26.0.1",
    "polars>=1.39.3",
    "tqdm>=4.67.3",
]
